@@ -30,7 +30,7 @@ displayHtmlHeader( _("Message Details"),
              "-->\n".
              "</script>\n", FALSE );
 
-sqgetGlobalVar('passed_id', $passed_id, SQ_GET);
+sqgetGlobalVar('passed_id', $passed_id, SQ_GET, NULL, SQ_TYPE_BIGINT);
 if (!sqgetGlobalVar('passed_ent_id', $passed_ent_id, SQ_GET))
     $passed_ent_id = 0;
 sqgetGlobalVar('mailbox', $mailbox, SQ_GET);
